--- a/src/main/resources/Storyboard.fxml
+++ b/src/main/resources/Storyboard.fxml
@@ -10,35 +10,63 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.lewisallen.storyboardfx.StoryboardController"
             prefHeight="400.0" prefWidth="600.0"
-            hgap="10">
+            hgap="10"
+            vgap="10"
+            >
 
 
-    <TextArea GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.rowSpan="3"/>
+    <VBox GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.rowSpan="3">
+        <Label text="The Story so far..."/>
+        <TextArea fx:id="currentStory" VBox.vgrow="ALWAYS" wrapText="true"/>
+    </VBox>
 
 
-    <TextArea GridPane.columnIndex="0" GridPane.rowIndex="0" visible="false"/>
+    <VBox GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <HBox>
+            <Button fx:id="goBack" text="Go Back"/>
+            <Button fx:id="goStart" text="Go to Start"/>
+            <Button fx:id="goRestart" text="Restart"/>
+        </HBox>
+        <TextArea visible="false"/>
+    </VBox>
     <VBox GridPane.columnIndex="1" GridPane.rowIndex="0">
-        <TextArea fx:id="top"/>
-        <Button fx:id="topSubmit" text="Submit" alignment="CENTER"/>
+        <TextArea fx:id="top" wrapText="true"/>
+        <HBox>
+            <Button fx:id="topSubmit" text="Submit"/>
+            <Button fx:id="topGo" text="Choose" disable="true" />
+        </HBox>
     </VBox>
     <TextArea GridPane.columnIndex="2" GridPane.rowIndex="0" visible="false"/>
 
 
     <VBox GridPane.columnIndex="0" GridPane.rowIndex="1">
-        <TextArea fx:id="left"/>
-        <Button fx:id="leftSubmit" text="Submit" alignment="CENTER"/>
+        <TextArea fx:id="left" wrapText="true"/>
+        <HBox>
+            <Button fx:id="leftSubmit" text="Submit" alignment="CENTER"/>
+            <Button fx:id="leftGo" text="Choose" disable="true" />
+        </HBox>
     </VBox>
-    <Label fx:id="currentLine" GridPane.columnIndex="1" GridPane.rowIndex="1" visible="false"/>
+    <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <TextArea fx:id="currentLine"  wrapText="true" editable="false"/>
+        <Button visible="false"/>
+    </VBox>
+
     <VBox GridPane.columnIndex="2" GridPane.rowIndex="1">
-        <TextArea fx:id="right"/>
-        <Button fx:id="rightSubmit" text="Submit" alignment="CENTER"/>
+        <TextArea fx:id="right" wrapText="true"/>
+        <HBox>
+            <Button fx:id="rightSubmit" text="Submit" alignment="CENTER"/>
+            <Button fx:id="rightGo" text="Choose" disable="true" />
+        </HBox>
     </VBox>
 
 
     <TextArea GridPane.columnIndex="0" GridPane.rowIndex="2" visible="false"/>
     <VBox GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <TextArea fx:id="bottom"/>
-        <Button fx:id="bottomSubmit" text="Submit" alignment="CENTER"/>
+        <TextArea fx:id="bottom" wrapText="true"/>
+        <HBox>
+            <Button fx:id="bottomSubmit" text="Submit" alignment="CENTER"/>
+            <Button fx:id="bottomGo" text="Choose" disable="true" />
+        </HBox>
     </VBox>
     <TextArea GridPane.columnIndex="2" GridPane.rowIndex="0" visible="false"/>
 
